# libsnark-workshop

./: .gitignore  .gitmodules  README.md
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt  convert_proof.cpp  convert_vk.cpp  json_conversion.cpp  json_conversion.hpp  prove.cpp  serialization.hpp  serialization.tcc  set_up.cpp  test.cpp  types.hpp  verify.cpp  vk_output.hpp
cpp/src/circuitry/: Circuit.hpp  FortyTwoCircuit.cpp  FortyTwoCircuit.hpp  VitalikExampleCircuitGadgetCircuit.cpp  VitalikExampleCircuitGadgetCircuit.hpp  VitaliksExampleCircuit.cpp  VitaliksExampleCircuit.hpp
cpp/src/circuitry/gadgets/: VitaliksExampleCircuitGadget.cpp  VitaliksExampleCircuitGadget.hpp
js/: compile-contracts.js  deploy.js  load-proof.js  package.json  send-transaction.js  test.js  util.js  vk-from-file.js
js/test/: test.js
sol/: GenericVerifier.sol  Pairing.sol  ProofCoin.sol
